responsiveness, buttons and sidebar colour changes and hovers etc, tried to get 720px width working (mobile) but it dont

--- a/index.html
+++ b/index.html
@@ -15,25 +15,53 @@
                 <img class="headerIcon" src="Icons/treasure-chest.svg">
                 <h1>Dashboard</h1>                
                 <div class="gap"></div>
-                <img class="sidebarIcon" src="Icons/shield.svg">
-                <p>Home</p>
-                <img class="sidebarIcon" src="Icons/ghost-outline.svg">
-                <p>Profile</p>
-                <img class="sidebarIcon" src="Icons/bottle-tonic-skull.svg">
-                <p>Messages</p>
-                <img class="sidebarIcon" src="Icons/crystal-ball.svg">
-                <p>History</p>
-                <img class="sidebarIcon" src="Icons/axe-battle.svg">
-                <p>Tasks</p>
-                <img class="sidebarIcon" src="Icons/arrow-projectile-multiple.svg">
-                <p>Communities</p>
+
+                <div class="sidebarItem">
+                    <img class="sidebarCardIcon" src="Icons/shield.svg">
+                    <p>Home</p>
+                </div>
+
+                <div class="sidebarItem">
+                    <img class="sidebarCardIcon" src="Icons/ghost-outline.svg">
+                    <p>Profile</p>
+                </div>
+
+                <div class="sidebarItem">
+                    <img class="sidebarCardIcon" src="Icons/bottle-tonic-skull.svg">
+                    <p>Messages</p>
+                </div>
+
+                <div class="sidebarItem">
+                    <img class="sidebarCardIcon" src="Icons/crystal-ball.svg">
+                    <p>History</p>
+                </div>
+
+                <div class="sidebarItem">
+                    <img class="sidebarCardIcon" src="Icons/axe-battle.svg">
+                    <p>Tasks</p>
+                </div>
+
+                <div class="sidebarItem">
+                    <img class="sidebarCardIcon" src="Icons/arrow-projectile-multiple.svg">
+                    <p>Communities</p>
+                </div>
+
                 <div class="gap"></div>
-                <img class="sidebarIcon" src="Icons/flask-empty-outline.svg">
-                <p>Settings</p>
-                <img class="sidebarIcon" src="Icons/magic-staff.svg">
-                <p>Support</p>
-                <img class="sidebarIcon" src="Icons/bow-arrow.svg">
-                <p>Privacy</p>
+
+                <div class="sidebarItem">
+                    <img class="sidebarCardIcon" src="Icons/flask-empty-outline.svg">
+                    <p>Settings</p>
+                </div>
+
+                <div class="sidebarItem">
+                    <img class="sidebarCardIcon" src="Icons/magic-staff.svg">
+                    <p>Support</p>
+                </div>
+
+                <div class="sidebarItem">
+                    <img class="sidebarCardIcon" src="Icons/bow-arrow.svg">
+                    <p>Privacy</p>
+                </div>
 
                     
             </div>
